<resources>
    <string name="app_name">Bike Device</string>

    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">Connected</string>

    <string name="disconnect">Disconnect device</string>
    <string name="connect">Connect device</string>


    <string name="toast_connection_lost">Device connection was lost</string>
    <string name="toast_unable_to_connect">Unable to connect device</string>

    <string name="title_paired_devices">Paired Devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="toast">toast</string>
    <string name="device_name">device_name</string>

    <string name="one_to_device">Send One to Bluetooth</string>
    <string name="gps_on_off">Gps OFF/ON </string>
    <string name="sensor_on_off">Sensor OFF/ON </string>
    <string name="nfc_text_out">Write NFC Beam text here... </string>
    <string name="nfc_text_in">Counter: 0</string>
    <string name="lock_unlock">Unlock/Lock </string>
    <string name="nfc_address">com.aau.wimb.whereismybike</string>

</resources>
