<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniel.bikedevice.LaunchActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_to_device"
        android:id="@+id/sendBut"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_on_off"
        android:id="@+id/gpsSwitch"
        android:layout_below="@+id/sendBut"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_on_off"
        android:id="@+id/motionSensorsSwitch"
        android:layout_below="@+id/gpsSwitch"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/nfc_text_out"
        android:id="@+id/nfcTextOut"
        android:gravity="center"
        android:layout_below="@+id/lockSwitch"
        android:background="@drawable/back"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/nfc_text_in"
        android:gravity="center"
        android:textSize="22sp"
        android:padding="10dp"
        android:id="@+id/TextIn"
        android:layout_above="@+id/sendBut"
        android:layout_centerHorizontal="true"
        android:background="@drawable/back"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_unlock"
        android:id="@+id/lockSwitch"
        android:layout_below="@+id/motionSensorsSwitch"
        android:layout_centerHorizontal="true"/>


    Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connect to Bluetooth"
        android:id="@+id/connectBut"
        android:layout_above="@+id/SendBut"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
